--- a/Data_Analysis/2-Pandas/Practica/1-World_Food_Facts/World Food Facts.ipynb
+++ b/Data_Analysis/2-Pandas/Practica/1-World_Food_Facts/World Food Facts.ipynb
@@ -15,6 +15,20 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 40,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import os\n",
+    "import requests\n",
+    "import zipfile\n",
+    "import pandas as pd\n",
+    "import pandas as pd\n",
+    "import numpy as np"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -23,12 +37,54 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
-    "import pandas as pd\n",
-    "import numpy as np"
+    "# URL del archivo comprimido\n",
+    "url = \"https://www.kaggle.com/datasets/openfoodfacts/world-food-facts/data\"\n",
+    "\n",
+    "# Nombre del archivo comprimido\n",
+    "zip_file_name = \"world-food-facts.zip\"\n",
+    "\n",
+    "# Carpeta de destino donde se guardará el archivo\n",
+    "download_folder = \"downloaded_data\"\n",
+    "\n",
+    "# Verificar si la carpeta de destino existe, de lo contrario, créala\n",
+    "if not os.path.exists(download_folder):\n",
+    "    os.makedirs(download_folder)\n",
+    "\n",
+    "# Ruta completa del archivo descargado\n",
+    "download_path = os.path.join(download_folder, zip_file_name)\n",
+    "\n",
+    "# Descargar el archivo\n",
+    "response = requests.get(url, stream=True)\n",
+    "\n",
+    "if response.status_code == 200:\n",
+    "    with open(download_path, 'wb') as file:\n",
+    "        for chunk in response.iter_content(chunk_size=1024):\n",
+    "            if chunk:\n",
+    "                file.write(chunk)\n",
+    "else:\n",
+    "    print(\"Error al descargar el archivo.\")\n",
+    "    exit()\n",
+    "\n",
+    "# Descomprimir el archivo\n",
+    "with zipfile.ZipFile(download_path, 'r') as zip_ref:\n",
+    "    zip_ref.extractall(download_folder)\n",
+    "\n",
+    "# Lista los archivos descomprimidos\n",
+    "extracted_files = os.listdir(download_folder)\n",
+    "\n",
+    "# Carga los datos en un DataFrame de Pandas (aquí asumimos que solo hay un archivo CSV)\n",
+    "if len(extracted_files) > 0:\n",
+    "    csv_file = extracted_files[0]\n",
+    "    data = pd.read_csv(os.path.join(download_folder, csv_file))\n",
+    "    print(\"Datos cargados con éxito en un DataFrame de Pandas.\")\n",
+    "else:\n",
+    "    print(\"No se encontraron archivos para cargar.\")\n",
+    "\n",
+    "# Ahora puedes trabajar con los datos en el DataFrame \"data\"."
    ]
   },
   {
@@ -43,7 +99,9 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "food=pd.read_csv('food_100.csv')"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -56,8 +114,238 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Unnamed: 0</th>\n",
+       "      <th>code</th>\n",
+       "      <th>url</th>\n",
+       "      <th>creator</th>\n",
+       "      <th>created_t</th>\n",
+       "      <th>created_datetime</th>\n",
+       "      <th>last_modified_t</th>\n",
+       "      <th>last_modified_datetime</th>\n",
+       "      <th>product_name</th>\n",
+       "      <th>generic_name</th>\n",
+       "      <th>...</th>\n",
+       "      <th>fruits-vegetables-nuts_100g</th>\n",
+       "      <th>fruits-vegetables-nuts-estimate_100g</th>\n",
+       "      <th>collagen-meat-protein-ratio_100g</th>\n",
+       "      <th>cocoa_100g</th>\n",
+       "      <th>chlorophyl_100g</th>\n",
+       "      <th>carbon-footprint_100g</th>\n",
+       "      <th>nutrition-score-fr_100g</th>\n",
+       "      <th>nutrition-score-uk_100g</th>\n",
+       "      <th>glycemic-index_100g</th>\n",
+       "      <th>water-hardness_100g</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>0</td>\n",
+       "      <td>3087</td>\n",
+       "      <td>http://world-en.openfoodfacts.org/product/0000...</td>\n",
+       "      <td>openfoodfacts-contributors</td>\n",
+       "      <td>1474103866</td>\n",
+       "      <td>2016-09-17T09:17:46Z</td>\n",
+       "      <td>1474103893</td>\n",
+       "      <td>2016-09-17T09:18:13Z</td>\n",
+       "      <td>Farine de blé noir</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>...</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>1</td>\n",
+       "      <td>4530</td>\n",
+       "      <td>http://world-en.openfoodfacts.org/product/0000...</td>\n",
+       "      <td>usda-ndb-import</td>\n",
+       "      <td>1489069957</td>\n",
+       "      <td>2017-03-09T14:32:37Z</td>\n",
+       "      <td>1489069957</td>\n",
+       "      <td>2017-03-09T14:32:37Z</td>\n",
+       "      <td>Banana Chips Sweetened (Whole)</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>...</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>14.0</td>\n",
+       "      <td>14.0</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>2</td>\n",
+       "      <td>4559</td>\n",
+       "      <td>http://world-en.openfoodfacts.org/product/0000...</td>\n",
+       "      <td>usda-ndb-import</td>\n",
+       "      <td>1489069957</td>\n",
+       "      <td>2017-03-09T14:32:37Z</td>\n",
+       "      <td>1489069957</td>\n",
+       "      <td>2017-03-09T14:32:37Z</td>\n",
+       "      <td>Peanuts</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>...</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>3</td>\n",
+       "      <td>16087</td>\n",
+       "      <td>http://world-en.openfoodfacts.org/product/0000...</td>\n",
+       "      <td>usda-ndb-import</td>\n",
+       "      <td>1489055731</td>\n",
+       "      <td>2017-03-09T10:35:31Z</td>\n",
+       "      <td>1489055731</td>\n",
+       "      <td>2017-03-09T10:35:31Z</td>\n",
+       "      <td>Organic Salted Nut Mix</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>...</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>12.0</td>\n",
+       "      <td>12.0</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>4</td>\n",
+       "      <td>16094</td>\n",
+       "      <td>http://world-en.openfoodfacts.org/product/0000...</td>\n",
+       "      <td>usda-ndb-import</td>\n",
+       "      <td>1489055653</td>\n",
+       "      <td>2017-03-09T10:34:13Z</td>\n",
+       "      <td>1489055653</td>\n",
+       "      <td>2017-03-09T10:34:13Z</td>\n",
+       "      <td>Organic Polenta</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>...</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>5 rows × 164 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "   Unnamed: 0   code                                                url  \\\n",
+       "0           0   3087  http://world-en.openfoodfacts.org/product/0000...   \n",
+       "1           1   4530  http://world-en.openfoodfacts.org/product/0000...   \n",
+       "2           2   4559  http://world-en.openfoodfacts.org/product/0000...   \n",
+       "3           3  16087  http://world-en.openfoodfacts.org/product/0000...   \n",
+       "4           4  16094  http://world-en.openfoodfacts.org/product/0000...   \n",
+       "\n",
+       "                      creator   created_t      created_datetime  \\\n",
+       "0  openfoodfacts-contributors  1474103866  2016-09-17T09:17:46Z   \n",
+       "1             usda-ndb-import  1489069957  2017-03-09T14:32:37Z   \n",
+       "2             usda-ndb-import  1489069957  2017-03-09T14:32:37Z   \n",
+       "3             usda-ndb-import  1489055731  2017-03-09T10:35:31Z   \n",
+       "4             usda-ndb-import  1489055653  2017-03-09T10:34:13Z   \n",
+       "\n",
+       "   last_modified_t last_modified_datetime                    product_name  \\\n",
+       "0       1474103893   2016-09-17T09:18:13Z              Farine de blé noir   \n",
+       "1       1489069957   2017-03-09T14:32:37Z  Banana Chips Sweetened (Whole)   \n",
+       "2       1489069957   2017-03-09T14:32:37Z                         Peanuts   \n",
+       "3       1489055731   2017-03-09T10:35:31Z          Organic Salted Nut Mix   \n",
+       "4       1489055653   2017-03-09T10:34:13Z                 Organic Polenta   \n",
+       "\n",
+       "   generic_name  ... fruits-vegetables-nuts_100g  \\\n",
+       "0           NaN  ...                         NaN   \n",
+       "1           NaN  ...                         NaN   \n",
+       "2           NaN  ...                         NaN   \n",
+       "3           NaN  ...                         NaN   \n",
+       "4           NaN  ...                         NaN   \n",
+       "\n",
+       "  fruits-vegetables-nuts-estimate_100g collagen-meat-protein-ratio_100g  \\\n",
+       "0                                  NaN                              NaN   \n",
+       "1                                  NaN                              NaN   \n",
+       "2                                  NaN                              NaN   \n",
+       "3                                  NaN                              NaN   \n",
+       "4                                  NaN                              NaN   \n",
+       "\n",
+       "  cocoa_100g chlorophyl_100g carbon-footprint_100g nutrition-score-fr_100g  \\\n",
+       "0        NaN             NaN                   NaN                     NaN   \n",
+       "1        NaN             NaN                   NaN                    14.0   \n",
+       "2        NaN             NaN                   NaN                     0.0   \n",
+       "3        NaN             NaN                   NaN                    12.0   \n",
+       "4        NaN             NaN                   NaN                     NaN   \n",
+       "\n",
+       "  nutrition-score-uk_100g  glycemic-index_100g  water-hardness_100g  \n",
+       "0                     NaN                  NaN                  NaN  \n",
+       "1                    14.0                  NaN                  NaN  \n",
+       "2                     0.0                  NaN                  NaN  \n",
+       "3                    12.0                  NaN                  NaN  \n",
+       "4                     NaN                  NaN                  NaN  \n",
+       "\n",
+       "[5 rows x 164 columns]"
+      ]
+     },
+     "execution_count": 37,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "food.head(5)"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -70,8 +358,21 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "100"
+      ]
+     },
+     "execution_count": 11,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "food.shape[0]"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -84,8 +385,21 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "164"
+      ]
+     },
+     "execution_count": 12,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "food.shape[1]"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -98,8 +412,18 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['Unnamed: 0', 'code', 'url', 'creator', 'created_t', 'created_datetime', 'last_modified_t', 'last_modified_datetime', 'product_name', 'generic_name', 'quantity', 'packaging', 'packaging_tags', 'brands', 'brands_tags', 'categories', 'categories_tags', 'categories_en', 'origins', 'origins_tags', 'manufacturing_places', 'manufacturing_places_tags', 'labels', 'labels_tags', 'labels_en', 'emb_codes', 'emb_codes_tags', 'first_packaging_code_geo', 'cities', 'cities_tags', 'purchase_places', 'stores', 'countries', 'countries_tags', 'countries_en', 'ingredients_text', 'allergens', 'allergens_en', 'traces', 'traces_tags', 'traces_en', 'serving_size', 'no_nutriments', 'additives_n', 'additives', 'additives_tags', 'additives_en', 'ingredients_from_palm_oil_n', 'ingredients_from_palm_oil', 'ingredients_from_palm_oil_tags', 'ingredients_that_may_be_from_palm_oil_n', 'ingredients_that_may_be_from_palm_oil', 'ingredients_that_may_be_from_palm_oil_tags', 'nutrition_grade_uk', 'nutrition_grade_fr', 'pnns_groups_1', 'pnns_groups_2', 'states', 'states_tags', 'states_en', 'main_category', 'main_category_en', 'image_url', 'image_small_url', 'energy_100g', 'energy-from-fat_100g', 'fat_100g', 'saturated-fat_100g', '-butyric-acid_100g', '-caproic-acid_100g', '-caprylic-acid_100g', '-capric-acid_100g', '-lauric-acid_100g', '-myristic-acid_100g', '-palmitic-acid_100g', '-stearic-acid_100g', '-arachidic-acid_100g', '-behenic-acid_100g', '-lignoceric-acid_100g', '-cerotic-acid_100g', '-montanic-acid_100g', '-melissic-acid_100g', 'monounsaturated-fat_100g', 'polyunsaturated-fat_100g', 'omega-3-fat_100g', '-alpha-linolenic-acid_100g', '-eicosapentaenoic-acid_100g', '-docosahexaenoic-acid_100g', 'omega-6-fat_100g', '-linoleic-acid_100g', '-arachidonic-acid_100g', '-gamma-linolenic-acid_100g', '-dihomo-gamma-linolenic-acid_100g', 'omega-9-fat_100g', '-oleic-acid_100g', '-elaidic-acid_100g', '-gondoic-acid_100g', '-mead-acid_100g', '-erucic-acid_100g', '-nervonic-acid_100g', 'trans-fat_100g', 'cholesterol_100g', 'carbohydrates_100g', 'sugars_100g', '-sucrose_100g', '-glucose_100g', '-fructose_100g', '-lactose_100g', '-maltose_100g', '-maltodextrins_100g', 'starch_100g', 'polyols_100g', 'fiber_100g', 'proteins_100g', 'casein_100g', 'serum-proteins_100g', 'nucleotides_100g', 'salt_100g', 'sodium_100g', 'alcohol_100g', 'vitamin-a_100g', 'beta-carotene_100g', 'vitamin-d_100g', 'vitamin-e_100g', 'vitamin-k_100g', 'vitamin-c_100g', 'vitamin-b1_100g', 'vitamin-b2_100g', 'vitamin-pp_100g', 'vitamin-b6_100g', 'vitamin-b9_100g', 'folates_100g', 'vitamin-b12_100g', 'biotin_100g', 'pantothenic-acid_100g', 'silica_100g', 'bicarbonate_100g', 'potassium_100g', 'chloride_100g', 'calcium_100g', 'phosphorus_100g', 'iron_100g', 'magnesium_100g', 'zinc_100g', 'copper_100g', 'manganese_100g', 'fluoride_100g', 'selenium_100g', 'chromium_100g', 'molybdenum_100g', 'iodine_100g', 'caffeine_100g', 'taurine_100g', 'ph_100g', 'fruits-vegetables-nuts_100g', 'fruits-vegetables-nuts-estimate_100g', 'collagen-meat-protein-ratio_100g', 'cocoa_100g', 'chlorophyl_100g', 'carbon-footprint_100g', 'nutrition-score-fr_100g', 'nutrition-score-uk_100g', 'glycemic-index_100g', 'water-hardness_100g']\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(food.columns.to_list())"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -110,10 +434,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 41,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'-sucrose_100g'"
+      ]
+     },
+     "execution_count": 41,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "food.columns[104]"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -126,8 +463,21 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "dtype('float64')"
+      ]
+     },
+     "execution_count": 24,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "food.iloc[:,104].dtype"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -140,14 +490,79 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "RangeIndex(start=0, stop=100, step=1)"
+      ]
+     },
+     "execution_count": 25,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "food.index"
+   ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
     "### Paso 11. ¿Cuál es el nombre del producto de la 19ª observación?"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "names=[col for col in alimentos.columns.to_list() if 'name' in col]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['Unnamed: 0', 'product_name', 'generic_name']"
+      ]
+     },
+     "execution_count": 33,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "names"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 43,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Unnamed: 0                                    18\n",
+       "product_name    Lotus Organic Brown Jasmine Rice\n",
+       "generic_name                                 NaN\n",
+       "Name: 18, dtype: object"
+      ]
+     },
+     "execution_count": 43,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "food.iloc[18][names]"
    ]
   },
   {
@@ -177,7 +592,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.4"
+   "version": "3.11.5"
   }
  },
  "nbformat": 4,
